# vscode-links

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  RELEASING.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  cli-release.yml  native-release.yml  release.yml  rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: format.rs  jsonc.rs  lib.rs  main.rs  run.rs  settings.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: csv.rs  git.rs  lib.rs  resolve.rs  schemas.rs  template.rs
crates/core/src/providers/: cnb.rs  coding.rs  github.rs  mod.rs
crates/napi/: Cargo.toml
crates/napi/src/: lib.rs
docs/: variables.md  variables.zh.md
scripts/: bump.mjs
src/: config.ts  index.ts  utils.ts
src/commands/: helpers.ts
src/commands/open/: index.ts
src/commands/open/cnb/: helpers.test.ts  helpers.ts  index.ts
src/commands/open/coding/: helpers.ts  index.ts
src/commands/open/github/: helpers.ts  index.ts
src/commands/open/remote/: index.ts
src/constants/: index.ts
src/entrypoints/command.open/: index.ts
src/entrypoints/command.open/cnb/: helpers.test.ts  helpers.ts
src/entrypoints/command.open/coding/: helpers.test.ts  helpers.ts
src/entrypoints/command.open/github/: helpers.ts  index.ts
src/entrypoints/status-bar-item.open/: index.ts
src/entrypoints/view.links/: index.ts
src/helpers/: config.ts  errors.ts  git.test.ts  git.ts  open.ts  schemas.ts  url.test.ts  url.ts  workspaces.ts
src/status-bar-item/: index.ts
src/store/: links.ts
src/template/: engine.ts
src/template/providers/: cnb.test.ts  cnb.ts  coding.test.ts  coding.ts  github.test.ts  github.ts  types.ts
src/views-containers/: index.ts  items.ts  provider.ts
tools/cli-installer/: README.md  install.sh.in
