[workspace]
resolver = "2"
members = [ "crates/core" ]

[workspace.package]
edition = "2024"
license = "MIT"
authors = [ "Yuns <yuns.xie@qq.com>" ]
repository = "https://github.com/yunsii/vscode-links"

[workspace.dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
regex = "1"
thiserror = "2"
csv = "1"
ureq = { version = "3", default-features = false, features = [ "rustls" ] }
anyhow = "1"
