[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/cli",
  "crates/napi"
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = [ "Yuns <yuns.xie@qq.com>" ]
repository = "https://github.com/yunsii/vscode-links"

[workspace.dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1", features = [ "preserve_order" ] }
regex = "1"
thiserror = "2"
csv = "1"
ureq = { version = "3", default-features = false, features = [ "rustls" ] }
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
json5 = "0.4"
napi = { version = "3", default-features = false, features = [
  "napi8",
  "serde-json"
] }
napi-derive = "3"
napi-build = "2"
