[package]
name = "vscode-links-cli"
version = "0.1.0"

edition.workspace = true

license.workspace = true

authors.workspace = true

repository.workspace = true

description = "Standalone CLI for vscode-links: resolves project links from a cwd + .vscode/settings.json without VS Code."

[dependencies]
vscode-links-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
json5 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "vscode-links"
path = "src/main.rs"

[lib]
name = "vscode_links_cli"
path = "src/lib.rs"
