[package]
name = "vscode-links-core"
version = "0.0.0"

edition.workspace = true

license.workspace = true

authors.workspace = true

repository.workspace = true

description = "Provider URL parsers, template rendering, and context building shared by the vscode-links CLI / N-API addon."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
ureq = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "vscode_links_core"
path = "src/lib.rs"
