[package]
name = "vscode-links-napi"
version = "0.1.1"

edition.workspace = true

license.workspace = true

authors.workspace = true

repository.workspace = true

description = "N-API binding around vscode-links-core for the @vscode-links/native npm package."

[lib]
crate-type = [ "cdylib" ]

[dependencies]
vscode-links-core = { path = "../core" }
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
